Updated the html layout with some class attributes. Updated CSS styling using flexbox

--- a/index.html
+++ b/index.html
@@ -5,8 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enzo Panem Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google Font: Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="navbar">
+            <ul>
+                <li><a href="#profile">Profile</a></li>
+                <li><a href="#showcase">Showcase</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Home -->
+    <section class="home">
+        <div class="container">
+            <h1>Hi, I'm Enzo</h1>
+            <p>Computer Engineer, Musician, Filmmaker</p>
+        </div>
+    </section>
+
+    <!-- Skills -->
+    <section class="skills">
+        <div class="skills-container">
+            <p>Java</p>
+            <p>Python</p>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+        </div>
+    </section>
+
+    <!-- Portfolio -->
+    <section class="portfolio">
+        
+    </section>
+
+    <footer class="footer">
+        <p>&copy; 2024 Enzo Panem. All rights reserved.</p>
+    </footer>
+    <script src="index.js"></script>
 </body>
 </html>
