--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enzo Panem Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Google Font: Poppins -->
+    <!-- Google Font: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -16,26 +16,35 @@
             <ul>
                 <li><a href="#profile">Profile</a></li>
                 <li><a href="#showcase">Showcase</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Home -->
-    <section class="home">
-        <div class="container">
-            <h1>Hi, I'm Enzo</h1>
-            <p>Computer Engineer, Musician, Filmmaker</p>
+    <section id="home" class="home-section">
+        <div class="home-container">
+            <div>
+                <h1>A creative mind seeking to blend the creative arts with computer engineering </h1>
+            </div>
+            <div>
+                <p>Hey, my name is Jose Florencio Panem, aka. Enzo &#128075; I'm a Computer Engineer, Musician, and Filmmaker</p>
+            </div>
         </div>
     </section>
 
     <!-- Skills -->
-    <section class="skills">
+    <section id="skills" class="skills-section">
         <div class="skills-container">
-            <p>Java</p>
-            <p>Python</p>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
+            <div class="skill">
+                <img src="images/Java-Logo.png" alt="Java-Logo">
+            </div>
+            <div class="skill">
+                <img src="images/Python-Logo.png" alt="Python-Logo">
+            </div>
+            <div class="skill">
+                <img src="images/C-Logo.png" alt="C-Logo">
+            </div>
         </div>
     </section>
 
