Fixed the formatting of the header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar">
+        <a href="#home">Enzo Panem</a>
+        <nav class="navbar">   
             <ul>
                 <li><a href="#profile">Profile</a></li>
                 <li><a href="#showcase">Showcase</a></li>
@@ -25,7 +26,7 @@
     <section id="home" class="home-section">
         <div class="home-container">
             <div>
-                <h1>A creative mind seeking to blend the creative arts with computer engineering </h1>
+                <h1>A creative mind seeking to blend the creative arts with computer engineering</h1>
             </div>
             <div>
                 <p>Hey, my name is Jose Florencio Panem, aka. Enzo &#128075; I'm a Computer Engineer, Musician, and Filmmaker</p>
