Updates to styling

--- a/index.html
+++ b/index.html
@@ -11,22 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <a href="#home">Enzo Panem</a>
-        <nav class="navbar">   
-            <ul>
-                <li><a href="#profile">Profile</a></li>
-                <li><a href="#showcase">Showcase</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    
+    <!-- Navbar -->
+
+    <nav>   
+        <div class="nav-logo">
+            <a href="#home">Enzo Panem</a>
+        </div>
+        <ul class="nav-links">
+            <li class="link"><a href="#profile">Profile</a></li>
+            <li class="link"><a href="#showcase">Showcase</a></li>
+            <li class="link"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Header -->
+    
+    <header class="header"></header>
 
     <!-- Home -->
     <section id="home" class="home-section">
         <div class="home-container">
             <div>
-                <h1>A creative mind seeking to blend the creative arts with computer engineering</h1>
+                <h1>A curious mind seeking to blend the creative arts with computer engineering</h1>
             </div>
             <div>
                 <p>Hey, my name is Jose Florencio Panem, aka. Enzo &#128075; I'm a Computer Engineer, Musician, and Filmmaker</p>
@@ -57,6 +64,6 @@
     <footer class="footer">
         <p>&copy; 2024 Enzo Panem. All rights reserved.</p>
     </footer>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
