Added skills section with enlarge animation when hovering.

--- a/index.html
+++ b/index.html
@@ -27,30 +27,27 @@
 
     <!-- Home -->
     
-    <header class="home">
+    <header>
         <div class="content">
-            <h1>My name is Jose Florencio Panem, aka. Enzo &#128075; I'm a Computer Engineer, Musician, and Filmmaker</h1>
-            <h4>A curious mind seeking to blend the creative arts with computer engineering</h4>
-            </div>
-        <div class="image">
-            <img src="images/tuff.JPG" alt="">
+            <h1>A curious mind seeking to blend the creative arts with computer engineering</h1>
+            <p>Hey! My name is Jose Florencio Panem, aka. Enzo &#128075; I'm a Computer Engineer, Musician, and Filmmaker</p>
+            <button>View profile</button>
         </div>
     </header>
 
     <!-- Skills -->
-    <!-- <section id="skills" class="skills-section">
+    <section id="skills" class="skills-section">
         <div class="skills-container">
-            <div class="skill">
-                <img src="images/Java-Logo.png" alt="Java-Logo">
-            </div>
-            <div class="skill">
-                <img src="images/Python-Logo.png" alt="Python-Logo">
-            </div>
-            <div class="skill">
-                <img src="images/C-Logo.png" alt="C-Logo">
-            </div>
+            <img src="images/html-logo.png" alt="Html-Logo">
+            <img src="images/css-logo.png" alt="Css-Logo">
+            <img src="images/js.png" alt="Js-Logo">
+            <img src="images/Python-Logo.png" alt="Python-Logo">
+            <img src="images/Java-Logo.png" alt="Java-Logo">
+            <img src="images/C-Logo.png" alt="C-Logo">
+            <img src="images/open-cv.png" alt="Open-Cv-Logo">
+            <img src="images/tensor-flow.png" alt="Tensor-Flow-Logo">
         </div>
-    </section> -->
+    </section>
 
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio-section">
