Complete revamp of the UI design. Format optimization and added span for some text styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>   
         <div class="nav-logo">
-            <a href="#home">Enzo Panem</a>
+            <a href="#home">ENZO PANEM</a>
         </div>
         <ul class="nav-links">
             <li class="link"><a href="#">About Me</a></li>
@@ -29,9 +29,10 @@
     
     <header>
         <div class="content">
-            <h1>A curious mind seeking to blend the creative arts with computer engineering</h1>
-            <p>Hey! My name is Jose Florencio Panem, aka. Enzo &#128075; I'm a Computer Engineer, Musician, and Filmmaker</p>
-            <button>View profile</button>
+            <h1>A curious mind seeking to blend the creative arts with <span>computer engineering</span></h1>
+            <h3>Hey! My name is Jose Florencio Panem, a.k.a. Enzo &#128075; I'm a <span>computer engineer</span></h3>
+            <p>Whether it’s building apps, making music, or producing films-shows how being versatile and open to new ideas can lead to amazing results. Innovators thrive when they can adapt to different tools and challenges, using creativity to solve problems and build something meaningful.</p>
+            <div class="btn"><button>View profile</button></div>
         </div>
     </header>
 
