Updates to header button style and animation

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="content">
             <h1>A curious mind seeking to blend the creative arts with <span>computer engineering</span></h1>
             <h3>Hey! My name is Jose Florencio Panem, a.k.a. Enzo &#128075; I'm a <span>computer engineer</span></h3>
-            <p>Whether it’s building apps, making music, or producing films-shows how being versatile and open to new ideas can lead to amazing results. Innovators thrive when they can adapt to different tools and challenges, using creativity to solve problems and build something meaningful.</p>
-            <div class="btn"><button>View profile</button></div>
+            <p>Whether it’s building apps, producing music, or filmmaking-shows how being versatile and open to new ideas can lead to amazing results. Innovators thrive when they can adapt to different tools and challenges, using creativity to solve problems and build something meaningful.</p>
+            <div class="btn"><button>View Profile</button></div>
         </div>
     </header>
 
