Added background for home page with svg images. Some updates to skills images layout

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
     <!-- Home -->
     
     <header>
+        <div class="background">
+            <img src="images/undraw_code_review_re_woeb.svg" alt="Compose-Music">
+            <img src="images/undraw_compose_music_re_wpiw.svg" alt="Code-Review">
+            <img src="images/undraw_videographer.svg" alt="Videographer">
+        </div>
         <div class="content">
             <h1>A curious mind seeking to blend the creative arts with <span>computer engineering</span></h1>
-            <h3>Hey! My name is Jose Florencio Panem, a.k.a. Enzo &#128075; I'm a <span>computer engineer</span></h3>
+            <h4>Hey! My name is Jose Florencio Panem, a.k.a. Enzo &#128075; I'm a <span>computer engineer</span></h4>
             <p>Whether it’s building apps, producing music, or filmmaking-shows how being versatile and open to new ideas can lead to amazing results. Innovators thrive when they can adapt to different tools and challenges, using creativity to solve problems and build something meaningful.</p>
             <div class="btn"><button>View Profile</button></div>
         </div>
