Changed all skills images from png to svg

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     <!-- Skills -->
     <section id="skills" class="skills-section">
         <div class="skills-container">
-            <img src="images/html-logo.png" alt="Html-Logo">
-            <img src="images/css-logo.png" alt="Css-Logo">
-            <img src="images/js.png" alt="Js-Logo">
-            <img src="images/Python-Logo.png" alt="Python-Logo">
-            <img src="images/Java-Logo.png" alt="Java-Logo">
-            <img src="images/C-Logo.png" alt="C-Logo">
-            <img src="images/open-cv.png" alt="Open-Cv-Logo">
-            <img src="images/tensor-flow.png" alt="Tensor-Flow-Logo">
+            <img src="images/html-5-svgrepo-com.svg" alt="Html-Logo">
+            <img src="images/css-3-svgrepo-com.svg" alt="Css-Logo">
+            <img src="images/js-svgrepo-com.svg" alt="Js-Logo">
+            <img src="images/python-svgrepo-com.svg" alt="Python-Logo">
+            <img src="images/java-svgrepo-com.svg" alt="Java-Logo">
+            <img src="images/C_Programming_Language.svg" alt="C-Logo">
+            <img src="images/opencv-svgrepo-com.svg" alt="Open-Cv-Logo">
+            <img src="images/tensorflow-svgrepo-com.svg" alt="Tensor-Flow-Logo">
         </div>
     </section>
 
