Updates to styling of Portfolio section. Added cards and title div

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <img src="images/js-svgrepo-com.svg" alt="Js-Logo">
             <img src="images/node-js-svgrepo-com.svg" alt="NodeJS-Logo">
             <img src="images/react-svgrepo-com.svg" alt="React-Logo">
-            <img src="images/python-svgrepo-com.svg" alt="Python-Logo">
             <img src="images/java-svgrepo-com.svg" alt="Java-Logo">
+            <img src="images/python-svgrepo-com.svg" alt="Python-Logo">
             <img src="images/C_Programming_Language.svg" alt="C-Logo">
             <img src="images/mysql-logo-svgrepo-com.svg" alt="MySQL-Logo">
             <img src="images/opencv-svgrepo-com.svg" alt="Open-Cv-Logo">
@@ -63,7 +63,37 @@
 
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio-section">
-        
+        <div class="title">
+            <h1>Portfolio</h1>
+        </div>
+        <div class="card">
+            <img src="images/undraw_server-cluster_7ugi.svg" alt="Server-Cluster">
+            <div class="container">
+                <h1>ECHO-ALPHA: Search And Rescue Robot</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
+                    aliquet sed, commodo sit amet sapien. Sed aliquet lectus nunc, vitae 
+                    semper risus ultricies in. Donec et ultrices ex. 
+                    Curabitur in ex non elit sagittis blandit. Donec purus tellus, 
+                    iaculis eu finibus quis, viverra in ligula. Cras egestas ac neque at iaculis. 
+                    Nulla convallis felis ac leo mattis, vel tristique ipsum imperdiet. 
+                    Sed ac tempus justo.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/undraw_design-components_529l.svg" alt="Design-Components">
+            <div class="container">
+                <h1>Task Tracker CLI</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
+                    aliquet sed, commodo sit amet sapien. Sed aliquet lectus nunc, vitae 
+                    semper risus ultricies in. Donec et ultrices ex. 
+                    Curabitur in ex non elit sagittis blandit. Donec purus tellus, 
+                    iaculis eu finibus quis, viverra in ligula. Cras egestas ac neque at iaculis. 
+                    Nulla convallis felis ac leo mattis, vel tristique ipsum imperdiet. 
+                    Sed ac tempus justo.</p>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
