--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="nav-links">
             <li class="link"><a href="#">About Me</a></li>
-            <li class="link"><a href="#portfolio">Portfolio</a></li>
+            <li class="link"><a href="#projects">Projects</a></li>
             <li class="link"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -61,13 +61,13 @@
         </div>
     </section>
 
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio-section">
+    <!-- Projects -->
+    <section id="projects" class="projects-section">
         <div class="title">
-            <h1>Portfolio</h1>
+            <h1>Projects</h1>
         </div>
         <div class="card">
-            <img src="images/undraw_server-cluster_7ugi.svg" alt="Server-Cluster">
+            <img src="images/echo-alpha2.svg" alt="Server-Cluster">
             <div class="container">
                 <h1>ECHO-ALPHA: Search And Rescue Robot</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
