UPDATE. Footer logos change color to primary color when cursor hovers over

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Hey! My name is Jose Florencio Panem, a.k.a. Enzo &#128075; I'm a <span>Computer Engineer</span> based in Toronto, Canada</h3>
             <p>Whether it’s building apps, producing music, or filmmaking-this shows how being versatile and open to new ideas can lead to amazing results. 
                 Innovators thrive when they can adapt to different tools and challenges, using creativity to solve problems and build something meaningful.</p>
-            <div class="btn"><button>View Profile</button></div>
+            <div class="btn"><button>View Résumé</button></div>
         </div>
     </header>
 
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="images/undraw_design-components_529l.svg" alt="Design-Components">
+            <img src="images/task-tracker.jpg" alt="Design-Components">
             <div class="container">
                 <h1>Task Tracker CLI</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -94,14 +94,41 @@
                     Sed ac tempus justo.</p>
             </div>
         </div>
+        <div class="card">
+            <img src="images/undraw_mello_uiud.svg" alt="Design-Components">
+            <div class="container">
+                <h1>Spotify Clone</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
+                    aliquet sed, commodo sit amet sapien. Sed aliquet lectus nunc, vitae 
+                    semper risus ultricies in. Donec et ultrices ex. 
+                    Curabitur in ex non elit sagittis blandit. Donec purus tellus, 
+                    iaculis eu finibus quis, viverra in ligula. Cras egestas ac neque at iaculis. 
+                    Nulla convallis felis ac leo mattis, vel tristique ipsum imperdiet. 
+                    Sed ac tempus justo.</p>
+            </div>
+        </div>
     </section>
 
-    <footer class="footer">
+    <section id="contact" class="contact-section">
+        <div class="contact-container">
+            <form action="">
+                <div class="title">
+                    <h1>Get in touch</h1>
+                    <hr>
+                </div>
+                <input type="text" name="name" placeholder="Your Name" class="contact-input" required>
+                <input type="email">
+            </form>
+        </div>
+    </section>
+
+    <footer>
         <div class="links">
             <!-- Opens new tab: 'target' and 'rel' attribute -->
-            <a href="https://www.linkedin.com/in/enzo-panem/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-161-svgrepo-com.svg"></a>
-            <a href="https://github.com/panem-enzo" target="_blank" rel="noopener noreferrer"><img src="images/github-142-svgrepo-com.svg"></a>
-            <a href="https://leetcode.com/u/EnzoPanem/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg"></a>
+            <a href="https://www.linkedin.com/in/enzo-panem/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-161-svgrepo-com.svg" class="footer-logo"></a>
+            <a href="https://github.com/panem-enzo" target="_blank" rel="noopener noreferrer"><img src="images/github-142-svgrepo-com.svg" class="footer-logo"></a>
+            <a href="https://leetcode.com/u/EnzoPanem/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg" class="footer-logo"></a>
         </div>
         <p>&copy; 2024 Enzo Panem. All rights reserved.</p>
     </footer>
