UPDATE. Added hyperlink to the 'View Resume' button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <h3>Hey! My name is Jose Florencio Panem, a.k.a. Enzo &#128075; I'm a <span>Computer Engineer</span> based in Toronto, Canada</h3>
             <p>Whether it’s building apps, producing music, or filmmaking-this shows how being versatile and open to new ideas can lead to amazing results. 
                 Innovators thrive when they can adapt to different tools and challenges, using creativity to solve problems and build something meaningful.</p>
-            <div class="btn"><button>View Résumé</button></div>
+            <a href="/assets/resume.pdf" target="_blank" rel="noopener noreferrer">
+                <div class="btn"><button>View Résumé</button></div>
+            </a>
         </div>
     </header>
 
