--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
                     Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
                     aliquet sed, commodo sit amet sapien. Sed aliquet lectus nunc, vitae 
                     semper risus ultricies in. Donec et ultrices ex. 
-                    Curabitur in ex non elit sagittis blandit. Donec purus tellus, 
-                    iaculis eu finibus quis, viverra in ligula. Cras egestas ac neque at iaculis. 
-                    Nulla convallis felis ac leo mattis, vel tristique ipsum imperdiet. 
-                    Sed ac tempus justo.</p>
+                    Curabitur in ex non elit sagittis blandit.
+                </p>
             </div>
         </div>
         <div class="card">
@@ -90,10 +88,7 @@
                     Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
                     aliquet sed, commodo sit amet sapien. Sed aliquet lectus nunc, vitae 
                     semper risus ultricies in. Donec et ultrices ex. 
-                    Curabitur in ex non elit sagittis blandit. Donec purus tellus, 
-                    iaculis eu finibus quis, viverra in ligula. Cras egestas ac neque at iaculis. 
-                    Nulla convallis felis ac leo mattis, vel tristique ipsum imperdiet. 
-                    Sed ac tempus justo.</p>
+                </p>
             </div>
         </div>
         <div class="card">
@@ -104,10 +99,7 @@
                     Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
                     aliquet sed, commodo sit amet sapien. Sed aliquet lectus nunc, vitae 
                     semper risus ultricies in. Donec et ultrices ex. 
-                    Curabitur in ex non elit sagittis blandit. Donec purus tellus, 
-                    iaculis eu finibus quis, viverra in ligula. Cras egestas ac neque at iaculis. 
-                    Nulla convallis felis ac leo mattis, vel tristique ipsum imperdiet. 
-                    Sed ac tempus justo.</p>
+                </p>
             </div>
         </div>
     </section>
@@ -137,7 +129,7 @@
             <a href="https://github.com/panem-enzo" target="_blank" rel="noopener noreferrer"><img src="images/github-142-svgrepo-com.svg" class="footer-logo"></a>
             <a href="https://leetcode.com/u/EnzoPanem/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg" class="footer-logo"></a>
         </div>
-        <p>&copy; 2024 Enzo Panem. All rights reserved.</p>
+        <p>&copy; 2025 Enzo Panem. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
