UPDATE. Significant changes to about-me section

--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
 <body>
     
     <!-- Navbar -->
-
     <nav>   
         <div class="nav-logo">
-            <a href="#">Enzo Panem</a>
+            <a href="#">ZOFOLIO</a>
         </div>
         <ul class="nav-links">
-            <li class="link"><a href="#">About Me</a></li>
+            <li class="link"><a href="#about-me">About Me</a></li>
             <li class="link"><a href="#projects">Projects</a></li>
             <li class="link"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
     <!-- Home -->
-    
     <header>
         <div class="background">
             <img src="images/undraw_code_review_re_woeb.svg" alt="Compose-Music">
@@ -44,6 +42,36 @@
             </a>
         </div>
     </header>
+
+    <!-- About Me -->
+    <section id="about-me" class="about-me-section">
+        <div>
+            <div class="about-me-title">
+                <h1>About Me</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="about-me-container">
+            <div class="about-me-left">
+                <img src="images/enzo2.jpg" alt="">
+            </div>
+            <div class="about-me-right">
+                <h2>Enzo Panem - Software Engineer</h2>
+                <p>Hey there! Welcome to my portfolio website. I'm Enzo Panem, a computer engineer based out of Toronto. 
+                    From producing my own short films to writing blocks of code on an IDE, I aim to combine the world of creative design with
+                    the world of logic.
+                    You want to shake things up together? Let's connect and have a chat!
+                </p>
+                <div class="links">
+                    <!-- Opens new tab: 'target' and 'rel' attribute -->
+                    <a href="https://www.linkedin.com/in/enzo-panem/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-161-svgrepo-com.svg" class="about-me-logo"></a>
+                    <a href="https://github.com/panem-enzo" target="_blank" rel="noopener noreferrer"><img src="images/github-142-svgrepo-com.svg" class="about-me-logo"></a>
+                    <a href="https://leetcode.com/u/EnzoPanem/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg" class="about-me-logo"></a>
+                    <a href="https://www.youtube.com/@ZoMags" target="_blank" rel="noopener noreferrer"><img src="images/youtube-filled-svgrepo-com.svg" class="about-me-logo"></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Skills -->
     <section id="skills" class="skills-section">
@@ -104,6 +132,7 @@
         </div>
     </section>
 
+    <!-- Contact -->
     <section id="contact" class="contact-section">
         <div class="contact-container">
             <form action="" class="contact-left">
