UPDATE. Some changes to the responsiveness of about-me section

--- a/index.html
+++ b/index.html
@@ -56,18 +56,20 @@
                 <img src="images/enzo2.jpg" alt="">
             </div>
             <div class="about-me-right">
-                <h2>Enzo Panem - Software Engineer</h2>
-                <p>Hey there! Welcome to my portfolio website. I'm Enzo Panem, a computer engineer based out of Toronto. 
-                    From producing my own short films to writing blocks of code on an IDE, I aim to combine the world of creative design with
-                    the world of logic.
-                    You want to shake things up together? Let's connect and have a chat!
-                </p>
-                <div class="links">
-                    <!-- Opens new tab: 'target' and 'rel' attribute -->
-                    <a href="https://www.linkedin.com/in/enzo-panem/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-161-svgrepo-com.svg" class="about-me-logo"></a>
-                    <a href="https://github.com/panem-enzo" target="_blank" rel="noopener noreferrer"><img src="images/github-142-svgrepo-com.svg" class="about-me-logo"></a>
-                    <a href="https://leetcode.com/u/EnzoPanem/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg" class="about-me-logo"></a>
-                    <a href="https://www.youtube.com/@ZoMags" target="_blank" rel="noopener noreferrer"><img src="images/youtube-filled-svgrepo-com.svg" class="about-me-logo"></a>
+                <h2>Enzo Panem <span>| Computer Engineer, Musician, Filmmaker, Athlete</span></h2>
+                <div class="content">
+                    <p>Hey there! Welcome to my portfolio website. I'm Enzo Panem, a computer engineer based out of Toronto. 
+                        From producing my own short films to writing blocks of code on an IDE, I aim to combine the world of creative design with
+                        the world of logic.
+                        You want to shake things up together? Let's connect and have a chat!
+                    </p>
+                    <div class="links">
+                        <!-- Opens new tab: 'target' and 'rel' attribute -->
+                        <a href="https://www.linkedin.com/in/enzo-panem/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-161-svgrepo-com.svg" class="about-me-logo"></a>
+                        <a href="https://github.com/panem-enzo" target="_blank" rel="noopener noreferrer"><img src="images/github-142-svgrepo-com.svg" class="about-me-logo"></a>
+                        <a href="https://leetcode.com/u/EnzoPanem/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg" class="about-me-logo"></a>
+                        <a href="https://www.youtube.com/@ZoMags" target="_blank" rel="noopener noreferrer"><img src="images/youtube-filled-svgrepo-com.svg" class="about-me-logo"></a>
+                    </div>
                 </div>
             </div>
         </div>
