FIXED. Mailing now redirects to native email app on desktop

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- Contact -->
     <section id="contact" class="contact-section">
         <div class="contact-container">
-            <form action="" class="contact-left">
+            <form action="mailto:panemjf@gmail.com" method="post" class="contact-left">
                 <div class="title">
                     <h1>Contact Me</h1>
                     <hr>
