UPDATE. Added a title component for Skills section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- About Me -->
     <section id="about-me" class="about-me-section">
         <div>
-            <div class="about-me-title">
+            <div class="section-title">
                 <h1>About Me</h1>
                 <hr>
             </div>
@@ -77,6 +77,10 @@
 
     <!-- Skills -->
     <section id="skills" class="skills-section">
+        <div class="section-title">
+            <h1>Skills</h1>
+            <hr>
+        </div>
         <div class="skills-container">
             <img src="images/html-5-svgrepo-com.svg" alt="Html-Logo">
             <img src="images/css-3-svgrepo-com.svg" alt="Css-Logo">
