UPDATE. Placeholder for 'Experience' section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
         <ul class="nav-links">
             <li class="link"><a href="#about-me">About Me</a></li>
+            <li class="link"><a href="#experience">Experience</a></li>
             <li class="link"><a href="#projects">Projects</a></li>
             <li class="link"><a href="#contact">Contact</a></li>
         </ul>
@@ -97,9 +98,19 @@
         </div>
     </section>
 
+    <!-- Experience -->
+     <section id="experience" class="experience-section">
+        <div class="section-title-pad">
+            <h1>Experience</h1>
+        </div>
+        <div class="experience-container">
+
+        </div>
+     </section>
+
     <!-- Projects -->
     <section id="projects" class="projects-section">
-        <div class="title">
+        <div class="section-title-pad">
             <h1>Projects</h1>
         </div>
         <div class="card">
