--- a/index.html
+++ b/index.html
@@ -104,7 +104,28 @@
             <h1>Experience</h1>
         </div>
         <div class="experience-container">
-            
+            <div class="card">
+                <div class="card-left">
+                    <p><span>JAN 2023 — AUG 2023</span></p>
+                </div>
+                <div class="card-right">
+                    <h3>Software Developer Intern, AI Automation Team • Capco</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
+                    aliquet sed, commodo sit amet sapien.
+                    </p>
+                    
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-left">
+                    <p><span>SEP 2022 — NOV 2022</span></p>
+                </div>
+                <div class="card-right">
+                    <h3>Re-Engineering and Programming Lead • York Engineering Competition (YEC)</h3>
+                </div>
+            </div>
         </div>
      </section>
 
