Fixed hover animation for the right column of the experience card, so that only the experience title changes color

--- a/index.html
+++ b/index.html
@@ -112,10 +112,14 @@
                     <h3>Software Developer Intern, AI Automation Team • Capco</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
-                    aliquet sed, commodo sit amet sapien.
+                        Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
+                        aliquet sed, commodo sit amet sapien.
                     </p>
-                    
+                    <div>
+                        <div>
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card">
@@ -124,6 +128,11 @@
                 </div>
                 <div class="card-right">
                     <h3>Re-Engineering and Programming Lead • York Engineering Competition (YEC)</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
+                        aliquet sed, commodo sit amet sapien.
+                    </p>
                 </div>
             </div>
         </div>
