Fixed timeline text to stay on line after page resizing

--- a/index.html
+++ b/index.html
@@ -115,9 +115,39 @@
                         Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
                         aliquet sed, commodo sit amet sapien.
                     </p>
-                    <div>
-                        <div>
-                            
+                    <div class="experience-skills">
+                        <div class="skill">
+                            TypeScript
+                        </div>
+                        <div class="skill">
+                            Node.js
+                        </div>
+                        <div class="skill">
+                            Nest.js
+                        </div>
+                        <div class="skill">
+                            Java
+                        </div>
+                        <div class="skill">
+                            Spring Boot
+                        </div>
+                        <div class="skill">
+                            JUnit
+                        </div>
+                        <div class="skill">
+                            Mockito
+                        </div>
+                        <div class="skill">
+                            OpenAI API
+                        </div>
+                        <div class="skill">
+                            Jira
+                        </div>
+                        <div class="skill">
+                            Confluence
+                        </div>
+                        <div class="skill">
+                            Agile
                         </div>
                     </div>
                 </div>
@@ -133,6 +163,20 @@
                         Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
                         aliquet sed, commodo sit amet sapien.
                     </p>
+                    <div class="experience-skills">
+                        <div class="skill">
+                            Leadership
+                        </div>
+                        <div class="skill">
+                            Teamwork
+                        </div>
+                        <div class="skill">
+                            Problem-Solving
+                        </div>
+                        <div class="skill">
+                            Communication
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
